--- a/views/dash/home.ejs
+++ b/views/dash/home.ejs
@@ -12,7 +12,7 @@
               </div>
               <div class="col" style="background-color: #3A4046; border-radius: 5px; padding: 10px; margin-left: 10px;">
                 <h6 style="color: #23A7FF;">Dados Cadastrados</h6>
-                <div>Alunos: NaN</div>
+                <div>Alunos: <%= alunos %></div>
                 <div>Livro: <%= livros %></div>
               </div>
             </div>
