--- a/views/dash/modules/header.ejs
+++ b/views/dash/modules/header.ejs
@@ -29,7 +29,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="/dash/books" id="home_menu" class="nav-link text-white" id="books1">
+            <a href="/dash/books" class="nav-link text-white" id="books1">
               <i class="fa-solid fa-book"></i>
               Livros
             </a>
